[UPDATE] test case compiling
